Fix fish lore being borked and use MiniMessage to make it happen