@@ -1,11 +1,11 @@
 package me.elsiff.morefish.item;
 
+import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import me.elsiff.morefish.fishing.Fish;
 import me.elsiff.morefish.fishing.FishType;
 import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.serializer.gson.GsonComponentSerializer;
-import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
+import net.kyori.adventure.text.minimessage.MiniMessage;
 import org.bukkit.NamespacedKey;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
@@ -19,6 +19,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static me.elsiff.morefish.MoreFish.getPlugin;
 import static me.elsiff.morefish.text.Lang.replace;
@@ -35,17 +36,13 @@ public interface FishItemStackConverter {
         ItemStack itemStack = fish.type().icon().clone();
         ItemMeta itemMeta = itemStack.getItemMeta();
         if (!fish.type().hasNotFishItemFormat()) {
-            GsonComponentSerializer gson = GsonComponentSerializer.gson();
-            PlainTextComponentSerializer plain = PlainTextComponentSerializer.plainText();
             Map<String, Object> replacement = getFormatReplacementMap(fish, length, catcher);
+            MiniMessage mm = MiniMessage.miniMessage();
             itemMeta.displayName(replace(getFormatConfig().map(cs -> cs.get("display-name").getAsString()).orElse("null"), replacement, catcher));
-            List<Component> lore = replace(getFormatConfig().map(json -> json.getAsJsonArray("lore").asList().stream().map(j -> {
-                Component component = gson.deserializeFromTree(j);
-                return plain.serialize(component);
-            }).toList()).orElse(new ArrayList<>()), replacement, catcher);
+            List<Component> lore = replace(getFormatConfig().map(json -> json.getAsJsonArray("lore").asList().stream().map(JsonElement::getAsString).collect(Collectors.toList())).orElse(new ArrayList<>()), replacement, catcher);
             List<Component> oldLore = itemMeta.lore();
             if (oldLore != null) {
-                lore.addAll(oldLore.stream().map(c -> replace(plain.serialize(c), replacement, catcher)).toList());
+                lore.addAll(oldLore.stream().map(c -> replace(mm.serialize(c), replacement, catcher)).toList());
             }
 
             itemMeta.lore(lore);
